--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -10,39 +10,31 @@
   Volver al panel de administración
 </ion-button>
 
-<div class="ion-margin-top">
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <h3 class="text-lg font-semibold">Lista de Usuarios</h3>
-      </ion-col>
-      <ion-col class="ion-text-end">
-        <ion-button fill="outline" (click)="createUser()">
-          <ion-ripple-effect></ion-ripple-effect>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            aria-hidden="true"
-            stroke-width="2"
-            class="w-4 h-4"
-          >
-            <path
-              d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z"
-            ></path>
-          </svg>
-          Crear usuario
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</div>
+<ion-col class="ion-text-end">
+  <ion-button fill="outline" (click)="createUser()">
+    <ion-ripple-effect></ion-ripple-effect>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      aria-hidden="true"
+      stroke-width="2"
+      class="w-4 h-4"
+    >
+      <path
+        d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z"
+      ></path>
+    </svg>
+    Crear usuario
+  </ion-button>
+</ion-col>
 
-<ion-grid>
-  <ion-row class="ion-justify-content-between">
-    <ion-col size="1">
+
+<ion-grid class="max-w-5xl mx-auto border border-gray-300 rounded-lg shadow-lg my-4 bg-white overflow-auto max-h-[calc(100vh-15rem)]">
+  <ion-row class="font-semibold text-sm text-center border-b bg-gray-100 hidden md:flex">
+    <ion-col size="1.2">
       <p
-        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+        class="flex items-center justify-center gap-2 font-sans text-sm font-normal leading-none"
       >
         ID
         <svg
@@ -62,9 +54,9 @@
         </svg>
       </p>
     </ion-col>
-    <ion-col size="2">
+    <ion-col size="1.8">
       <p
-        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+        class="flex items-center justify-center gap-2 font-sans text-sm font-normal leading-none"
       >
         Usuario
         <svg
@@ -86,7 +78,7 @@
     </ion-col>
     <ion-col size="3">
       <p
-        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+        class="flex items-center justify-center gap-2 font-sans text-sm font-normal leading-none"
       >
         Email
         <svg
@@ -106,9 +98,9 @@
         </svg>
       </p>
     </ion-col>
-    <ion-col size="1">
+    <ion-col size="2.2">
       <p
-        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+        class="flex items-center justify-center gap-2 font-sans text-sm font-normal leading-none"
       >
         Rol
         <svg
@@ -130,7 +122,7 @@
     </ion-col>
     <ion-col size="2">
       <p
-        class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none"
+        class="flex items-center justify-center gap-2 font-sans text-sm font-normal leading-none"
       >
         Fecha de registro
         <svg
@@ -150,37 +142,42 @@
         </svg>
       </p>
     </ion-col>
-    <ion-col size="2"></ion-col>
+    <ion-col size="4"></ion-col>
   </ion-row>
 
-  <ion-row *ngFor="let user of userList" class="ion-justify-content-between">
-    <ion-col size="1">
-      <p>{{ user.id }}</p>
+  <ion-row 
+    *ngFor="let user of userList" 
+    class="text-center border-b hover:bg-gray-50 items-center flex flex-wrap md:flex-nowrap max-h-[calc(100vh-15rem)]">
+    <ion-col size="12" size-md="1" class="px-2 py-2 text-xs flex md:block">
+      <span class="font-semibold md:hidden">ID:</span>{{ user.id }}
     </ion-col>
-    <ion-col size="2">
-      <p>{{ user.name }} {{ user.lastname }}</p>
+    <ion-col size="12" size-md="2" class="px-2 py-2 text-xs flex md:block">
+      <span class="font-semibold md:hidden"></span>{{ user.name }} {{ user.lastname }}
     </ion-col>
-    <ion-col size="3">
-      <p>{{ user.email }}</p>
+    <ion-col size="12" size-md="3" class="px-2 py-2 text-xs flex md:block">
+      <span class="font-semibold md:hidden">Email:</span>{{ user.email }}
     </ion-col>
-    <ion-col size="1">
+    <ion-col size="12" size-md="2" class="px-2 py-2 text-xs flex md:block">
+      <span class="font-semibold md:hidden">Rol:</span>
       <!--Si el usuario es administrador, lo mostramos como un botón con fondo verde-->
       @if(user.role === 'admin'){
-      <ion-button fill="outline" color="success"> {{ user.role }} </ion-button>
+      <ion-button fill="outline" size="small" color="success" class="w-20 md:w-auto"> {{ user.role }} </ion-button>
       } @else {
-      <ion-button fill="outline" color="tertiary"> {{ user.role }} </ion-button>
+      <ion-button fill="outline" size="small" color="tertiary" class="w-20 md:w-auto"> {{ user.role }} </ion-button>
       }
     </ion-col>
-    <ion-col size="2">
-      <p>{{ this.formatRegistrationDate(user.registration_date) }}</p>
+    <ion-col size="12" size-md="2" class="px-2 py-2 text-xs flex md:block">
+      <span class="font-semibold md:hidden">Fecha de registro:</span>
+      {{ this.formatRegistrationDate(user.registration_date) }}
     </ion-col>
-    <ion-col size="2">
-      <ion-button fill="outline" color="primary" (click)="editUser(user.id)"
+    <ion-col size="12" size-md="2" class="px-2 py-2 flex justify-center space-x-1 md:space-x-2">
+      <ion-button fill="outline" color="primary" size="small" (click)="editUser(user.id)"
         >Editar</ion-button
       >
       <ion-button
         fill="outline"
         color="danger"
+        size="small"
         (click)="openDeleteTab(user.id.toString())"
         >Borrar</ion-button
       >
